--- a/src/index.css
+++ b/src/index.css
@@ -1656,6 +1656,10 @@ html::-webkit-scrollbar-thumb,
 }
 
 .animate-spin-slow {
+  animation: spin-slow 15s linear infinite;
+}
+
+.animate-spin-fast {
   animation: spin-slow 4s linear infinite;
 }
 
